@@ -1,10 +1,17 @@
+2007-11-20  Sven Neumann  <sven@gimp.org>
+
+	Merged from trunk:
+
+	* plug-ins/script-fu/scripts/t-o-p-logo.scm: applied patch from
+	Ulf-D. Ehlert that fixes the background color used in the Particle
+	Trace filter (bug #498282).
+
 2007-11-19  Tor Lillqvist  <tml@novell.com>
 
 	Merged from trunk:
 
-	* libgimpwidgets/gimpcolorscale.c
-	(gimp_color_scale_render_stipple): Don't write past end of
-	buffer. (#399484)
+	* libgimpwidgets/gimpcolorscale.c (gimp_color_scale_render_stipple):
+	Don't write past end of buffer (bug #399484).
 
 2007-11-16  Sven Neumann  <sven@gimp.org>
 
